--- a/myStyleSheet.css
+++ b/myStyleSheet.css
@@ -1,6 +1,8 @@
 .changeColor {
+	background-image: '';
 	background-color: teal;
 }
 .undoChange {
 	background-color: '#fff';
+	background-image: '../../../assets/images/background3.jpg';
 }
