--- a/myStyleSheet.css
+++ b/myStyleSheet.css
@@ -4,5 +4,5 @@
 }
 .undoChange {
 	background-color: '#fff';
-	background-image: 'https://harrisonscotato.github.io/assets/images/background3.jpg';
+	background-image: 'background.jpg';
 }
