--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -685,7 +685,7 @@ a {
 .cid-sIwfKMUMrf {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/background3.jpg");
+  background-image: url("background.jpg");
 }
 .cid-sIwfKMUMrf .mbr-overlay {
   background: #fafafa;
@@ -1438,7 +1438,7 @@ a {
 .cid-sJ889PmCyL {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
+  background-image: url("background.jpg");
 }
 .cid-sJ889PmCyL .mbr-overlay {
   background: #fafafa;
